--- a/lab03/images/index.html
+++ b/lab03/images/index.html
@@ -5,7 +5,7 @@
 </head>
 
 <body>
-
+<img src="Roulette.png" alt=RouletteCake" clas="img" width="30" height="40">
     <header>
         <section>
 <h1>My Roulette Cake Recipe</h1>
