--- a/lab02/index.html
+++ b/lab02/index.html
@@ -1,6 +1,9 @@
 <html>
 <html lang="eng">
 <head>
+    <meta charset="UTF-8">
+    <meta name="description" content="favorite recipe code">
+    <meta content 
     <link rel="stylesheet" href="style.css">
 <title>My Favorite Recipe</title>
 </head>
