--- a/lab02/index.html
+++ b/lab02/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="description" content="favorite recipe code">
     <meta content 
-    <link rel="stylesheet" href="/recipe.css">
+    <link rel="stylesheet" href="https://www.w3schools.com/html/styles.css">
 <title>My Favorite Recipe</title>
 </head>
 
