--- a/lab02/index.html
+++ b/lab02/index.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="description" content="favorite recipe code">
-    <meta content 
-    <link rel="stylesheet" href="https://www.w3schools.com/html/styles.css">
+    <link rel="stylesheet" href="recipe.css">
 <title>My Favorite Recipe</title>
 </head>
 
