--- a/lab03/index.html
+++ b/lab03/index.html
@@ -50,7 +50,7 @@
 This is my favorite recipe because it is super easy to make and it just melts away in your tongue! I received so many compliments and it's effortless! I've had so many requests from family and friends asking me to make it again!! My mother and I used to make this ever since I was little so I think I've mastered it by now, haha! I will attach below a website that offers free delicious recipes, feel free to check it out! Hope you enjoy!
 
 <p> 
-<a href= "https://www.chefspencil.com/best-russian-cakes/"> Best Russian Cake Recipes</a>
+<a href= "https://www.chefspencil.com/best-russian-cakes/" target="_blank"> Best Russian Cake Recipes</a>
 <p>
 body {background-color: #FAF0E6;}
 h1 {font-family: "Serif"; color: #B0C4DE;
