--- a/lab03/index.html
+++ b/lab03/index.html
@@ -1,5 +1,3 @@
-<html>
-<head>
 <html lang="eng">
 <head>
 <title>My Favorite Recipe</title>
@@ -52,9 +50,5 @@ This is my favorite recipe because it is super easy to make and it just melts aw
 <p> 
 <a href= "https://www.chefspencil.com/best-russian-cakes/" target="_blank"> Best Russian Cake Recipes</a>
 <p>
-body {background-color: #FAF0E6;}
-h1 {font-family: "Serif"; color: #B0C4DE;
-Text-transform: Uppercase;}
-h2 {font-family:"Serif"; color: #191970}
-h3 {font-family: "Serif"; color: #4682B4}
-p1 {Margin: 70Px;}
+</body>
+</html>
