--- a/lab03/index.html
+++ b/lab03/index.html
@@ -1,9 +1,11 @@
 <html lang="eng">
 <head>
+    <link rel="stylesheet" type="text/css" href="recipe.css">
 <title>My Favorite Recipe</title>
 </head>
 
 <body>
+    <img src="Roulette.png" alt="Roullete.jpg" class="img1" width="100" height="80">
 
     <header>
         <section>
