--- a/lab01/index.html
+++ b/lab01/index.html
@@ -10,7 +10,7 @@
     <header>
         <section>
 <h1>My Roulette Cake Recipe</h1>
-<h2>This Recipe is Created by Malika. It is similar to a traditional Russian Roulette Cake. Once you make it, I guarantee you that you'll make it a thousand times.</h2>
+<h2>This recipe is created by Malika. It is similar to a traditional Russian Roulette Cake. Once you make it, I guarantee you that you'll make it a thousand times.</h2>
  </section>
  </header>
  <section>
