--- a/lab03/index.html
+++ b/lab03/index.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-    <img src="Roulette.png" alt="Roullete.jpg" class="img1" width="100" height="80">
+    <img src="Roulette.png" alt="Roulette cake" class="img1" width="100" height="80">
 
     <header>
         <section>
@@ -48,6 +48,7 @@
  </ol>
             <p>Note: Each slice serves 1 person</p>
 <p>
+<img src="Roullete.jpg" alt="roullete cake" class="img2">
 This is my favorite recipe because it is super easy to make and it just melts away in your tongue! I received so many compliments and it's effortless! I've had so many requests from family and friends asking me to make it again!! My mother and I used to make this ever since I was little so I think I've mastered it by now, haha! I will attach below a website that offers free delicious recipes, feel free to check it out! Hope you enjoy!
 
 <p> 
