--- a/lab03/index.html
+++ b/lab03/index.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-    <img src="Roulette.png" alt="Roulette cake" class="img1" width="100" height="80">
+    <img src="Images/Roulette.png" alt="Roulette cake" class="img1" width="500">
 
     <header>
         <section>
@@ -34,10 +34,10 @@
  <ol>
 <li>In a bowl, separate the yellow egg yolk from the clear</li>
  <li>Take your mixer and mix the clear egg until it turns very white in color and solid in texture to the point that if you were to flip it upside down, it would not drip or fall.</li>
- <li>Once you finish mixing the clear eggs, mix the yellow egg yolks in a separate bowl with four tablespoons or half a cup of sugar.</li>
+ <li> After mixing the clear eggs, mix the yellow egg yolks in a separate bowl with four tablespoons or half a cup of sugar.</li>
  <li>Combine the two batters together (yellow egg yolk batter & the clear egg batter) and add 3 tablespoons of flour, and a teaspoon of Baking Powder, then mix all of that.</li>
  <li>Lay your batter on a parchment</li> 
-<li>Preheat oven to 360 degree fahrenheit & leave in the oven for 6-8 minutes.</li>
+<li>Preheat oven to 360 degrees Fahrenheit & leave in the oven for 6-8 minutes.</li>
 <li>While your sponge cake batter is in the oven, you can start making the cream.</li>
 <li>Take your Heavy Whipping Cream and pour half of it into a bowl (you may use all of it, it is totally up to you.)</li>
  <li>Now, take your mixer and mix the cream until it turns solid in texture and white in color. Once you're done mixing, add half a cup of condensed milk for sweetness and give it another swift mix.</li>
@@ -47,12 +47,12 @@
 
  </ol>
             <p>Note: Each slice serves 1 person</p>
-<p>
-<img src="Roullete.jpg" alt="roullete cake" class="img2">
-This is my favorite recipe because it is super easy to make and it just melts away in your tongue! I received so many compliments and it's effortless! I've had so many requests from family and friends asking me to make it again!! My mother and I used to make this ever since I was little so I think I've mastered it by now, haha! I will attach below a website that offers free delicious recipes, feel free to check it out! Hope you enjoy!
+
+<p>This is my favorite recipe because it is super easy to make and melts away in your tongue! I received so many compliments and it's effortless! I've had so many requests from family and friends asking me to make it again!! My mother and I used to make this ever since I was little so I think I've mastered it by now, haha! I will attach below a website that offers free delicious recipes, feel free to check it out! Hope you enjoy!</p>
 
 <p> 
 <a href= "https://www.chefspencil.com/best-russian-cakes/" target="_blank"> Best Russian Cake Recipes</a>
 <p>
+<img src="images/Roullete.jpg" alt="roullete cake" class="img2" width="500">
 </body>
 </html>
