--- a/lab03/index.html
+++ b/lab03/index.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-    <img src="Images/Roulette.png" alt="Roulette cake" class="img1" width="500">
+    <img src="images/Roulette.png" alt="Roulette cake" class="img1" width="500">
 
     <header>
         <section>
