--- a/lab04/index.html
+++ b/lab04/index.html
@@ -11,13 +11,16 @@
     <header>
         <section>
 <h1>My Roulette Cake Recipe</h1>
+<div>
 <h2>This Recipe is Created by Malika. It is similar to a traditional Russian Roulette Cake. Once you make it, I guarantee you that you'll make it a thousand times.</h2>
- </section>
+
+</section>
  </header>
  <div id = "wrapper">
  <section id="Ingredients">
- <h3>Ingredients</h3>
 
+
+ <h3>Ingredients</h3>
 <ul>
 <li>Flour</li>
 <li>4 Eggs</li>
@@ -28,9 +31,11 @@
 <li>Hershey's Chocolate</li>
 <li>Any fruit (raspberries preferred (optional))</li>
 
+
  </ul>
  </section>
  <section id="recipe">
+    <div>
  <h3>Preparing the Recipe</h3>
  <ol>
 <li>In a bowl, separate the yellow egg yolk from the clear</li>
@@ -49,12 +54,17 @@
 </div>
 
  </ol>
+
             <p>Note: Each slice serves 1 person</p>
 
 <p>This is my favorite recipe because it is super easy to make and melts away in your tongue! I received so many compliments and it's effortless! I've had so many requests from family and friends asking me to make it again!! My mother and I used to make this ever since I was little so I think I've mastered it by now, haha! I will attach below a website that offers free delicious recipes, feel free to check it out! Hope you enjoy!</p>
 <p> 
 <a href= "https://www.chefspencil.com/best-russian-cakes/" target="_blank"> Best Russian Cake Recipes</a>
 <p>
+
 <img src="images/Roullete.jpg" alt="roullete cake" class="img2" width="500">
 </body>
+</html>
+<html> 
+    
 </html>
