--- a/lab04/index.html
+++ b/lab04/index.html
@@ -7,19 +7,19 @@
 
 <body>
     <img src="images/Roulette.png" alt="Roulette cake" class="img1" width="500">
-
+<div class="hi">
     <header>
-        <section>
+        <section class="idek">
 <h1>My Roulette Cake Recipe</h1>
-<div>
+<div class="w3-container w3-red">
 <h2>This Recipe is Created by Malika. It is similar to a traditional Russian Roulette Cake. Once you make it, I guarantee you that you'll make it a thousand times.</h2>
-
+</div>
 </section>
  </header>
  <div id = "wrapper">
- <section id="Ingredients">
 
 
+<div class="idek long">
  <h3>Ingredients</h3>
 <ul>
 <li>Flour</li>
@@ -30,12 +30,12 @@
 <li>Condensed Milk</li>
 <li>Hershey's Chocolate</li>
 <li>Any fruit (raspberries preferred (optional))</li>
+</div>
 
 
  </ul>
  </section>
- <section id="recipe">
-    <div>
+ <section class="idek">
  <h3>Preparing the Recipe</h3>
  <ol>
 <li>In a bowl, separate the yellow egg yolk from the clear</li>
@@ -54,17 +54,16 @@
 </div>
 
  </ol>
-
+ <section class="idek">
             <p>Note: Each slice serves 1 person</p>
 
 <p>This is my favorite recipe because it is super easy to make and melts away in your tongue! I received so many compliments and it's effortless! I've had so many requests from family and friends asking me to make it again!! My mother and I used to make this ever since I was little so I think I've mastered it by now, haha! I will attach below a website that offers free delicious recipes, feel free to check it out! Hope you enjoy!</p>
 <p> 
 <a href= "https://www.chefspencil.com/best-russian-cakes/" target="_blank"> Best Russian Cake Recipes</a>
 <p>
-
+</section>
+</div>
 <img src="images/Roullete.jpg" alt="roullete cake" class="img2" width="500">
+&#169; Malika 2023
 </body>
-</html>
-<html> 
-    
 </html>
