--- a/lab09/index.html
+++ b/lab09/index.html
@@ -296,8 +296,8 @@
       </form>
     </div>
 
-    <video height="1000px" width="1000px" controls>
-      <source src="roulletecake.mp4">
+    <video height="100px" width="100px" controls>
+      <source src="roulettecake(Y1).mp4">
     </video>
 
     <br>
