--- a/lab09/index.html
+++ b/lab09/index.html
@@ -296,9 +296,34 @@
       </form>
     </div>
 
-    <video height="100px" width="100px" controls>
-      <source src="roulettecake(Y1).mp4">
+    <video height="500px" width="500px" controls>
+      <source src="videos/roulettecake(Y1).mp4">
     </video>
+
+    <video height="500px" width="500px" controls>
+      <source src="videos/roulettecake(YY2).mp4">
+    </video>
+
+    <video height="500px" width="500px" controls>
+      <source src="videos/roulettecake(YY3).mp4">
+    </video>
+
+    <video height="500px" width="500px" controls>
+      <source src="videos/roulettecakeYY4.mp4">
+    </video>
+
+    <video height="500px" width="500px" controls>
+      <source src="videos/roulettecake(YY5).mp4">
+    </video>
+
+    <video height="500px" width="500px" controls>
+      <source src="videos/roulettecake(YY6).mp4">
+    </video>
+
+    <video height="500px" width="500px" controls>
+      <source src="videos/roulettecake(YY7).mp4">
+    </video>
+
 
     <br>
 
