--- a/lab09/index.html
+++ b/lab09/index.html
@@ -295,7 +295,7 @@
         <input type="reset" />
       </form>
     </div>
-
+  <center>
     <video height="200px" width="100px" controls>
       <source src="videos/roulettecake(Y1).mp4">
     </video>
@@ -323,6 +323,7 @@
     <video height="200px" width="100px" controls>
       <source src="videos/roulettecake(YY7).mp4">
     </video>
+    </center>
 
 
     <br>
