--- a/lab10/XMLandJS.html
+++ b/lab10/XMLandJS.html
@@ -6,7 +6,7 @@
   </head>
 
   <body>
-    <img src="images/xml.jpeg" alt="Roulette cake" class="img1" width="500" />
+    <img src="images/xml.jpeg" alt="xml" class="img1" width="500" />
 
     <h1>XML and Javascript</h1>
     <table>
