--- a/lab10/index.html
+++ b/lab10/index.html
@@ -1,1 +1,134 @@
+<!DOCTYPE html>
+<html lang="eng">
+  <head>
+    <link rel="stylesheet" type="text/css" href="style.css" />
+    <title>XML and JavaScript</title>
+  </head>
 
+  <body>
+    <img src="images/xml.jpeg" alt="xml" class="img1" width="500" />
+
+    <h1>XML and Javascript</h1>
+    <table>
+      <th colspan="2" class="xml">XML</th>
+      <tr>
+        <td>
+          <b>What is XML?</b>
+        </td>
+        <td>
+          XML stands for e<b>X</b>tensible <b>M</b>arkup <b>L</b>anguage, and is
+          a coding language that operates on user-defined tags to create
+          meaningful data which allows computers to identify relationships
+          between different items in the document. It is the "tags" which makes
+          XML so useful because XML is just information wrapped in tags.
+        </td>
+      </tr>
+
+      <tr>
+        <td>
+          <b> How is XML used? </b>
+        </td>
+        <td>
+          It is used to structure and describe information. It provides a method
+          for transferring textual content across mediums (browser, mobile,
+          etc.). It is bascially platform independent and is designed and used
+          to store and transfer data.
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <b> Example of XML </b>
+        </td>
+        <td>
+          xml <br />
+          < student > <br />
+          < name > Malika Salikhbaeva < /name >
+          <br />
+          < age > 19 < /age > <br />
+          < major > IT < /major> <br />
+          < college > CCBC < /college >
+          <br />
+          < /student >
+          <br />
+        </td>
+      </tr>
+    </table>
+
+    <br />
+
+    <table>
+      <th colspan="2" class="xml">JavaScript</th>
+      <tr>
+        <td>
+          <b>What is JavaScript?</b>
+        </td>
+        <td>
+          Javascript is a programming language that runs inside the browser and
+          works together with HTML and CSS to create interactive experiences.
+        </td>
+      </tr>
+
+      <tr>
+        <td>
+          <b> How is JavaScript related to HTML & CSS? </b>
+        </td>
+        <td>JavaScript is closely related to HTML and CSS as it is often used together to create dynamic and interactive web pages. HTML provides the structure and content of a webpage, CSS is used for styling and layout, and JavaScript adds interactivity and functionality to the webpage. With JavaScript, you can manipulate HTML elements, respond to user actions, etc.</td>
+      </tr>
+      <tr>
+        <td>
+          <b> Common JavaScript Elements </b>
+        </td>
+        <td>Variables <br> Loops <br> Functions <br> Arrays <br> Objects <br> DOM manipulation <br> Events <br> Async programming</td>
+      </tr>
+
+      <tr>
+        <td>
+          <b> Common JavaScript Properties </b>
+        </td>
+        <td>Length <br> innerHTML <br> className <br> id <br> style <br> href <br> src <br> value <br> textContent <br> offsetTop</td>
+      </tr>
+
+      <tr>
+        <td>
+          <b> Common JavaScript Methods </b>
+        </td>
+        <td>
+            getElementById() <br>
+             querySelector()<br>
+             querySelectorAll()<br>
+             appendChild()<br>
+            insertBefore()<br>
+            removeChild()<br>
+             replaceChild()<br>
+             addEventListener()<br>
+             removeEventListener()<br>
+             parseInt()<br>
+             parseFloat()<br>
+            stringify()<br>
+
+        </td>
+      </tr>
+
+      <tr>
+        <td>
+          <b> Common JavaScript Functions </b>
+        </td>
+        <td>console.log() <br>
+            alert() <br>
+            parseInt() <br>
+            parseFloat() <br>
+            Math.random() <br>
+            Math.max() <br>
+            Math.min() <br>
+            JSON.stringify() <br>
+            JSON.parse() <br>
+            Array.prototype.forEach() <br>
+            (link unavailable)() <br>
+            Array.prototype.filter() <br>
+            Object.keys() <br>
+            Object.values() <br>
+            </td>
+      </tr>
+    </table>
+  </body>
+</html>
