--- a/finalproject/about.html
+++ b/finalproject/about.html
@@ -8,16 +8,13 @@
   <body>
     <section>
     <header class="menu">
-      <a href="index.html" id="current">Home</a> 
+      <a href="index.html">Home</a> 
       <a href="hijabs.html">Hijabs</a> 
       <a href="dresses.html">Dresses</a> 
-      <a href="about.html">About Us</a> 
+      <a href="about.html" id="current">About Us</a> 
     </header>
 
     <h1>ELEGANCE BY MALIKA</h1>
-
-   
-    </div>
 
     </section>
   </body>
