--- a/finalproject/index.html
+++ b/finalproject/index.html
@@ -7,18 +7,56 @@
 
   <body>
     <section>
-    <header class="menu">
-      <a href="index.html" id="current">Home</a> 
-      <a href="hijabs.html">Hijabs</a> 
-      <a href="dresses.html">Dresses</a> 
-      <a href="about.html">About Us</a> 
-    </header>
+      <header class="menu">
+        <a href="index.html" id="current">Home</a>
+        <a href="hijabs.html">Hijabs</a>
+        <a href="dresses.html">Dresses</a>
+        <a href="about.html">About Us</a>
+      </header>
 
-    <h1>ELEGANCE BY MALIKA</h1>
-
-   
-    </div>
-
+      <h1>ELEGANCE BY MALIKA</h1>
     </section>
+
+    <section class="card">
+      <img
+        src="https://veiled.com/cdn/shop/products/texture-classic-chiffon-hijab-soft-grey-830407_1300x.jpg?v=1648329380"
+        width="400"
+      />
+      <div class="caption">
+        <p>
+          Browse all our hijabs in your favorite fabrics
+          <br />
+          All the essentials and some guilty pleasures.
+          <br />
+          You'll find a modern color palette in premium materials like cotton,
+          jersey, satin, chiffon, viscose, modal, silk, and more.
+        </p>
+
+        <a href="hijabs.html" class="click">New Hijab Arrivals</a>
+      </div>
+    </section>
+
+    <section class="card">
+      <div class="caption">
+        <p>
+          Looking for the perfect modest dress for your next big occasion? Look no
+          further than ElegancebyMalika! Go through our collections of modest formal
+          dresses ✨
+        </p>
+
+        <a href="dresses.html" class="click">Shop Dresses </a>
+      </div>
+      <img
+        src="https://veiled.com/cdn/shop/products/anabelle-pleated-waist-ruffle-maxi-dress-night-sky-204068_1300x.jpg?v=1655065300"
+        width="400"
+      />
+    </section>
+    <p>
+      <b>We love what we do</b>
+      <br />
+      And we've been told we're pretty good at it. We're confident you'll be
+      happy with your experience here! 
+      <br />
+    </p>
   </body>
 </html>
