--- a/finalproject/hijabs.html
+++ b/finalproject/hijabs.html
@@ -21,51 +21,86 @@
     <div class="butterfly">
         <img src="https://veiled.com/cdn/shop/products/georgette-crepe-hijab-vanilla-636428_1300x.jpg?v=1649137272"
         width="300">
-        <p>caption</p>
-        <p>$10</p>
+        <p>Amelia Hijab</p>
+        <p>$10.00</p>
     </div>
 
     <div class="butterfly">
         <img src="https://veiled.com/cdn/shop/products/chiffon-lite-hijab-bouquet-809364_1300x.jpg?v=1648329075"
         width="300">
-        <p>caption</p>
-        <p>$10</p>
+        <p>Chloe Hijab</p>
+        <p>$10.00</p>
     </div>
 
     <div class="butterfly">
         <img src="https://veiled.com/cdn/shop/products/georgette-crepe-hijab-sage-563668_1300x.jpg?v=1649137156"
         width="300">
-        <p>caption</p>
-        <p>$10</p>
+        <p>Ella Hijab</p>
+        <p>$10.00</p>
     </div>
 
     <div class="butterfly">
         <img src="https://veiled.com/cdn/shop/products/medina-silk-hijab-mecca-369560_1300x.jpg?v=1648329355"
         width="300">
-        <p>caption</p>
-        <p>$10</p>
+        <p>Adeline Hijab</p>
+        <p>$10.00</p>
     </div>
 
     <div class="butterfly">
         <img src="https://veiled.com/cdn/shop/products/essential-chiffon-hijab-barely-beige-129267_1300x.jpg?v=1666502905"
         width="300">
-        <p>caption</p>
-        <p>$10</p>
+        <p>Celeste Hijab</p>
+        <p>$10.00</p>
     </div>
 
     <div class="butterfly">
         <img src="https://veiled.com/cdn/shop/files/bamboo-jersey-hijab-dusty-rose-915150_1300x.jpg?v=1700096079"
         width="300">
-        <p>caption</p>
-        <p>$10</p>
+        <p>Irene Hijab</p>
+        <p>$10.00</p>
     </div>
 
 
     <div class="butterfly">
-        <img src="https://veiled.com/cdn/shop/products/essential-chiffon-hijab-barely-beige-129267_1300x.jpg?v=1666502905"
+        <img src="https://veiled.com/cdn/shop/products/texture-classic-chiffon-hijab-soft-grey-914347_1300x.jpg?v=1648329528"
         width="300">
-        <p>caption</p>
-        <p>$10</p>
+        <p>Ivy Hijab</p>
+        <p>$10.00</p>
+    </div>
+
+    <div class="butterfly">
+        <img src="https://veiled.com/cdn/shop/products/essential-chiffon-hijab-sedona-sand-376369_1300x.jpg?v=1671038211"
+        width="300">
+        <p>Adeline Hijab</p>
+        <p>$10.00</p>
+    </div>
+
+    <div class="butterfly">
+        <img src="https://veiled.com/cdn/shop/products/texture-twill-chiffon-hijab-flushed-295457_1300x.jpg?v=1649137247"
+        width="300">
+        <p>Celeste Hijab</p>
+        <p>$10.00</p>
+    </div>
+
+    <div class="butterfly">
+        <img src="https://veiled.com/cdn/shop/products/texture-classic-chiffon-hijab-sea-salt-375832_1300x.jpg?v=1647129060"
+        width="300">
+        <p>Irene Hijab</p>
+        <p>$10.00</p>
+    </div>
+
+    <div class="butterfly">
+        <img src="https://veiled.com/cdn/shop/products/georgette-crepe-hijab-sumac-573564_1300x.jpg?v=1649786056"
+        width="300">
+        <p>Sumac Hijab</p>
+        <p>$10.00</p>
+    </div>
+
+    <div class="butterfly">
+        <img src="https://veiled.com/cdn/shop/products/georgette-crepe-hijab-chai-597062_1300x.jpg?v=1649137004"
+        width="300">
+        <p>Georgette Crepe Hijab</p>
+        <p>$10.00</p>
     </div>
 
 
