--- a/finalproject/dresses.html
+++ b/finalproject/dresses.html
@@ -7,52 +7,124 @@
 
   <body>
     <section>
-    <header class="menu">
-      <a href="index.html">Home</a> 
-      <a href="hijabs.html">Hijabs</a> 
-      <a href="dresses.html" id="current">Dresses</a> 
-      <a href="about.html">About Us</a> 
-    </header>
+      <header class="menu">
+        <a href="index.html">Home</a>
+        <a href="hijabs.html">Hijabs</a>
+        <a href="dresses.html" id="current">Dresses</a>
+        <a href="about.html">About Us</a>
+      </header>
 
-    <h1>ELEGANCE BY MALIKA</h1>
-</section>
-<div class="images">
-    <div class="butterfly">
-        <img src="https://veiled.com/cdn/shop/products/georgette-crepe-hijab-white-mocha-784566_1300x.jpg?v=1649137367"
-        width="300">
-        <p>caption</p>
-        <p>$10</p>
-    </div>
-
-    <div class="butterfly">
-        <img src="https://veiled.com/cdn/shop/products/chiffon-lite-hijab-bouquet-809364_1300x.jpg?v=1648329075"
-        width="300">
-        <p>caption</p>
-        <p>$10</p>
-    </div>
-
-    <div class="butterfly">
-        <img src="https://veiled.com/cdn/shop/products/georgette-crepe-hijab-sage-563668_1300x.jpg?v=1649137156"
-        width="300">
-        <p>caption</p>
-        <p>$10</p>
-    </div>
-
-    <div class="butterfly">
-        <img src="https://veiled.com/cdn/shop/products/medina-silk-hijab-mecca-369560_1300x.jpg?v=1648329355"
-        width="300">
-        <p>caption</p>
-        <p>$10</p>
-    </div>
-
-    <div class="butterfly">
-        <img src="https://veiled.com/cdn/shop/products/essential-chiffon-hijab-barely-beige-129267_1300x.jpg?v=1666502905"
-        width="300">
-        <p>caption</p>
-        <p>$10</p>
-    </div>
-</div>
-
+      <h1>ELEGANCE BY MALIKA</h1>
     </section>
+    <div class="images">
+      <div class="butterfly">
+        <img
+          src="https://veiled.com/cdn/shop/products/georgette-crepe-hijab-white-mocha-784566_1300x.jpg?v=1649137367"
+          width="300"
+        />
+        <p>Charlotte Dress</p>
+        <p>$110</p>
+      </div>
+
+      <div class="butterfly">
+        <img
+          src="https://veiled.com/cdn/shop/products/shereen-wrap-front-satin-maxi-dress-deep-mauve-703066_1300x.jpg?v=1618501237"
+          width="300"
+        />
+        <p>Céline Dress</p>
+        <p>$145.00</p>
+      </div>
+
+      <div class="butterfly">
+        <img
+          src="https://veiled.com/cdn/shop/products/shereen-wrap-front-satin-maxi-dress-light-taupe-193829_1300x.jpg?v=1618688049"
+          width="300"
+        />
+        <p>Élise Dress</p>
+        <p>$155.00</p>
+      </div>
+
+      <div class="butterfly">
+        <img
+          src="https://veiled.com/cdn/shop/products/sadia-open-abaya-sage-673060_1300x.jpg?v=1647443241"
+          width="300"
+        />
+        <p>Lucia Dress</p>
+        <p>$155.00</p>
+      </div>
+
+      <div class="butterfly">
+        <img
+          src="https://veiled.com/cdn/shop/products/sadia-open-abaya-cypress-green-600802_1300x.jpg?v=1677958948"
+          width="300"
+        />
+        <p>Camilla Dress</p>
+        <p>$130.00</p>
+      </div>
+
+      <div class="butterfly">
+        <img
+          src="https://veiled.com/cdn/shop/products/sadia-open-abaya-white-525018_1300x.jpg?v=1677959502"
+          width="300"
+        />
+        <p>Francesca Dress</p>
+        <p>$140.00</p>
+      </div>
+
+      <div class="butterfly">
+        <img
+          src="https://veiled.com/cdn/shop/products/anabelle-pleated-waist-ruffle-maxi-dress-cypress-green-145697_1300x.jpg?v=1677972707"
+          width="300"
+        />
+        <p>Shereen Alessia Dress</p>
+        <p>$155.00</p>
+      </div>
+
+      <div class="butterfly">
+        <img
+          src="https://veiled.com/cdn/shop/products/amani-pleat-maxi-dress-soft-pink-617182_1300x.jpg?v=1677468493"
+          width="300"
+        />
+        <p>Arianna Dress</p>
+        <p>$155.00</p>
+      </div>
+      <div class="butterfly">
+        <img
+          src="https://veiled.com/cdn/shop/products/amani-pleat-maxi-dress-soft-teal-328627_1300x.jpg?v=1677468206"
+          width="300"
+        />
+        <p>Bella Dress</p>
+        <p>$145.00</p>
+      </div>
+      <div class="butterfly">
+        <img
+          src="https://veiled.com/cdn/shop/products/omera-flare-cuff-satin-maxi-dress-deep-purple-288470_1300x.jpg?v=1675461617"
+          width="300"
+        />
+        <p>Adelina Dress</p>
+        <p>$120.00</p>
+      </div>
+
+      <div class="butterfly">
+        <img
+          src="https://veiled.com/cdn/shop/products/anabelle-pleated-waist-ruffle-maxi-dress-night-sky-204068_1300x.jpg?v=1655065300"
+          width="300"
+        />
+        <p>Gracie Dress</p>
+        <p>$160.00</p>
+      </div>
+
+      <div class="butterfly">
+        <img
+          src="https://veiled.com/cdn/shop/products/shereen-wrap-front-satin-maxi-dress-opal-146468_1300x.jpg?v=1680888513"
+          width="300"
+        />
+        <p>Ella Dress</p>
+        <p>$155.00</p>
+      </div>
+
+     
+      </div>
+    </div>
   </body>
 </html>
