--- a/finalproject/index.html
+++ b/finalproject/index.html
@@ -2,7 +2,7 @@
 <html lang="eng">
   <head>
     <link rel="stylesheet" type="text/css" href="style.css" />
-    <title>elegance by Malika</title>
+    <title>Elegance by Malika</title>
   </head>
 
   <body>
