--- a/finalproject/index.html
+++ b/finalproject/index.html
@@ -2,7 +2,8 @@
 <html lang="eng">
   <head>
     <link rel="stylesheet" type="text/css" href="style.css" />
-    <title>Elegance by Malika</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>elegance by Malika</title>
   </head>
 
   <body>
@@ -39,9 +40,9 @@
     <section class="card">
       <div class="caption">
         <p>
-          Looking for the perfect modest dress for your next big occasion? Look no
-          further than ElegancebyMalika! Go through our collections of modest formal
-          dresses ✨
+          Looking for the perfect modest dress for your next big occasion? Look
+          no further than ElegancebyMalika! Go through our collections of modest
+          formal dresses ✨
         </p>
 
         <a href="dresses.html" class="click">Shop Dresses </a>
@@ -51,11 +52,75 @@
         width="400"
       />
     </section>
+    <center>
+      <table>
+        <th colspan="7" class="size">Dress Size Chart</th>
+        <tr>
+          <td>
+            <b>Size</b>
+          </td>
+          <td>XS</td>
+          <td>S</td>
+          <td>M</td>
+          <td>L</td>
+          <td>XL</td>
+          <td>XXL</td>
+        </tr>
+
+        <tr>
+          <td>
+            <b> Chest </b>
+          </td>
+          <td>36</td>
+          <td>38</td>
+          <td>40</td>
+          <td>42</td>
+          <td>44</td>
+          <td>47</td>
+        </tr>
+        <tr>
+          <td>
+            <b> Waist </b>
+          </td>
+          <td>31</td>
+          <td>33</td>
+          <td>35</td>
+          <td>37</td>
+          <td>39</td>
+          <td>40</td>
+        </tr>
+
+        <tr>
+          <td>
+            <b> Hips </b>
+          </td>
+          <td>37</td>
+          <td>39</td>
+          <td>42</td>
+          <td>44</td>
+          <td>46</td>
+          <td>49</td>
+        </tr>
+        <tr>
+          <td>
+            <b> Shoulder </b>
+          </td>
+          <td>15</td>
+          <td>15.5</td>
+          <td>16</td>
+          <td>16.5</td>
+          <td>17</td>
+          <td>18</td>
+        </tr>
+
+        <tr></tr>
+      </table>
+    </center>
     <p>
       <b>We love what we do</b>
       <br />
       And we've been told we're pretty good at it. We're confident you'll be
-      happy with your experience here! 
+      happy with your experience here!
       <br />
     </p>
   </body>
