--- a/lab10/index.html
+++ b/lab10/index.html
@@ -10,7 +10,7 @@
 
     <h1>XML and Javascript</h1>
     <table>
-      <th colspan="2" class="xml">XML</th>
+      <th> colspan="2" class="xml">XML</th>
       <tr>
         <td>
           <b>What is XML?</b>
